kcalcore: avoid crash and improve performance.

* vector.reserve(0) can crash on a detached vector (QTBUG-51758)
* but anyway it's pointless to do map lookup + reserve if we have nothing to append
* minimize the amounts of map lookups in removeRelations() as well.
* and fix the amoung being passed to reserve, we're appending to an existing
vector (not necessarily empty) so we must reserve(count() + new items).
(bug in commit 2ea428d)

CCMAIL: iamsergio@gmail.com